@@ -70,6 +70,7 @@ This will make the dependency to the old Sirius Web architecture more explicit.
 - https://github.com/eclipse-sirius/sirius-web/issues/3352[#3352] [diagram] Fix an issue that prevents pinned elements from being unpinned unintentionally
 - https://github.com/eclipse-sirius/sirius-web/issues/3301[#3301] [diagram] Fix an issue that caused direct edit to fail if a node didn't have an inside label.
 - https://github.com/eclipse-sirius/sirius-web/issues/3373[#3373] [diagram] Fix potential IllegalArgumentException with non uuid shape.
+- https://github.com/eclipse-sirius/sirius-web/issues/3383[#3383] [diagram] Fix an issue where the first resizing after node creation was not persisted.
 
 === New Features
 
@@ -110,7 +111,7 @@ They still support returning an `java.time.Instant` object directly.
 - https://github.com/eclipse-sirius/sirius-web/issues/3376[#3376] [diagram] Prevent `getToolSection` to be called during multi-selection
 - https://github.com/eclipse-sirius/sirius-web/issues/3377[#3377] [diagram] Only synchronize selection with explorer at the end of the process
 - https://github.com/eclipse-sirius/sirius-web/issues/3359[#3359] Add report on document upload
-- https://github.com/eclipse-sirius/sirius-web/issues/3405[#3405] Display layout tools vertically in group palette
+- https://github.com/eclipse-sirius/sirius-web/issues/3405[#3405] [diagram] Display layout tools vertically in group palette
 
 
 == v2024.3.0
